# vnnews-graph-producer

./: LICENSE  README.md  pyproject.toml  run.ipynb  run.py  todo.md
.github/workflows/: update-data.yml
kaggle/: kernel_metadata.json
src/vnnews_graph_producer/: analytics.py  entity_extractor.py  sanitize_text.py  utils.py
src/vnnews_graph_producer/data_models/: article.py  data_dicts.py  entity.py  graph.py  link.py
src/vnnews_graph_producer/entity_extractor/: __init__.py  clean_text_content.py  ner_run.py
src/vnnews_graph_producer/scraper/: __init__.py  article_scraper.py  sources.py  special_handlers.py
tests/: test_data_modules.py  test_extract_entities.py  test_scrape_articles.py  test_special_handlers.py
